{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 380,
  "lineage": "7d82a5dd-cbe5-ebef-458e-ee2a1aa00d09",
  "resources": [
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-23T08:07:25.238-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ehes-gcp-poc/global/firewalls/allow-http-https",
            "log_config": [],
            "name": "allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/networks/main-vpc",
            "priority": 1000,
            "project": "ehes-gcp-poc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/firewalls/allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server",
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat_gateway",
            "module.vpc.google_compute_subnetwork.private_subnet_01",
            "module.vpc.google_compute_subnetwork.private_subnet_02",
            "module.vpc.google_compute_subnetwork.private_subnet_03",
            "module.vpc.google_compute_subnetwork.private_subnet_04",
            "module.vpc.google_compute_subnetwork.private_subnet_05",
            "module.vpc.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-04-23T08:07:25.238-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ehes-gcp-poc/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/networks/main-vpc",
            "priority": 1000,
            "project": "ehes-gcp-poc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/24",
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24",
              "10.0.4.0/24",
              "10.0.5.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat_gateway",
            "module.vpc.google_compute_subnetwork.private_subnet_01",
            "module.vpc.google_compute_subnetwork.private_subnet_02",
            "module.vpc.google_compute_subnetwork.private_subnet_03",
            "module.vpc.google_compute_subnetwork.private_subnet_04",
            "module.vpc.google_compute_subnetwork.private_subnet_05",
            "module.vpc.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_mqtt",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1883",
                  "8883"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-23T08:07:25.404-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ehes-gcp-poc/global/firewalls/allow-mqtt",
            "log_config": [],
            "name": "allow-mqtt",
            "network": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/networks/main-vpc",
            "priority": 1000,
            "project": "ehes-gcp-poc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/firewalls/allow-mqtt",
            "source_ranges": [
              "10.0.4.0/24",
              "10.0.5.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "mqtt-broker"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat_gateway",
            "module.vpc.google_compute_subnetwork.private_subnet_01",
            "module.vpc.google_compute_subnetwork.private_subnet_02",
            "module.vpc.google_compute_subnetwork.private_subnet_03",
            "module.vpc.google_compute_subnetwork.private_subnet_04",
            "module.vpc.google_compute_subnetwork.private_subnet_05",
            "module.vpc.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-23T08:07:25.399-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ehes-gcp-poc/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/networks/main-vpc",
            "priority": 1000,
            "project": "ehes-gcp-poc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-enabled"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat_gateway",
            "module.vpc.google_compute_subnetwork.private_subnet_01",
            "module.vpc.google_compute_subnetwork.private_subnet_02",
            "module.vpc.google_compute_subnetwork.private_subnet_03",
            "module.vpc.google_compute_subnetwork.private_subnet_04",
            "module.vpc.google_compute_subnetwork.private_subnet_05",
            "module.vpc.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "cassandra_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "7000",
                  "7001",
                  "7199",
                  "9042",
                  "9160"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-23T09:33:15.955-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ehes-gcp-poc/global/firewalls/cassendra-internal",
            "log_config": [],
            "name": "cassendra-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/networks/main-vpc",
            "priority": 1000,
            "project": "ehes-gcp-poc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/firewalls/cassendra-internal",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "cassendra"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "cassendra"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat_gateway",
            "module.vpc.google_compute_subnetwork.private_subnet_01",
            "module.vpc.google_compute_subnetwork.private_subnet_02",
            "module.vpc.google_compute_subnetwork.private_subnet_03",
            "module.vpc.google_compute_subnetwork.private_subnet_04",
            "module.vpc.google_compute_subnetwork.private_subnet_05",
            "module.vpc.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "cassandra_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-23T09:33:16.372-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ehes-gcp-poc/global/firewalls/cassndra-ssh",
            "log_config": [],
            "name": "cassndra-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/networks/main-vpc",
            "priority": 1000,
            "project": "ehes-gcp-poc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/firewalls/cassndra-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "cassendra-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat_gateway",
            "module.vpc.google_compute_subnetwork.private_subnet_01",
            "module.vpc.google_compute_subnetwork.private_subnet_02",
            "module.vpc.google_compute_subnetwork.private_subnet_03",
            "module.vpc.google_compute_subnetwork.private_subnet_04",
            "module.vpc.google_compute_subnetwork.private_subnet_05",
            "module.vpc.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "app_lb_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-04-23T08:06:31.497-07:00",
            "enable_cdn": false,
            "fingerprint": "f5a2wOuofbI=",
            "generated_id": 4387444018030886680,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/healthChecks/app-lb-health-check"
            ],
            "id": "projects/ehes-gcp-poc/global/backendServices/app-lb-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "app-lb-backend",
            "port_name": "http",
            "project": "ehes-gcp-poc",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/backendServices/app-lb-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.load_balancers.google_compute_health_check.app_lb_health_check"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "network_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "backend_service": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/regions/asia-southeast1/backendServices/network-lb-backend",
            "creation_timestamp": "2025-04-23T08:07:55.834-07:00",
            "forwarding_rule_id": 2461111173859556516,
            "id": "projects/ehes-gcp-poc/regions/asia-southeast1/forwardingRules/network-lb",
            "ip_address": "34.126.91.146",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "network-lb",
            "network_tier": "PREMIUM",
            "port_range": "1-65535",
            "project": "ehes-gcp-poc",
            "recreate_closed_psc": false,
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/regions/asia-southeast1/forwardingRules/network-lb"
          },
          "dependencies": [
            "module.load_balancers.google_compute_instance_group_manager.instance_group",
            "module.load_balancers.google_compute_instance_template.instance_template",
            "module.load_balancers.google_compute_region_backend_service.network_lb_backend",
            "module.load_balancers.google_compute_region_health_check.network_lb_health_check",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private_subnet_03"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "app_lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.36.223.78",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-04-23T08:06:18.787-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/ehes-gcp-poc/global/addresses/app-lb-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "app-lb-ip",
            "prefix_length": 0,
            "project": "ehes-gcp-poc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/addresses/app-lb-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "forwarding_rule_id": 9112186361806634184,
            "id": "projects/ehes-gcp-poc/global/forwardingRules/app-lb",
            "ip_address": "34.36.223.78",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "app-lb",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "ehes-gcp-poc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/forwardingRules/app-lb",
            "target": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/targetHttpProxies/app-lb-proxy"
          },
          "dependencies": [
            "module.load_balancers.google_compute_backend_service.app_lb_backend",
            "module.load_balancers.google_compute_global_address.app_lb_ip",
            "module.load_balancers.google_compute_health_check.app_lb_health_check",
            "module.load_balancers.google_compute_target_http_proxy.app_lb_proxy",
            "module.load_balancers.google_compute_url_map.app_lb_url_map"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "app_lb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "network_lb_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/zones/asia-southeast1-a/instanceGroups/mqtt-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-04-23T08:07:34.337-07:00",
            "enable_cdn": false,
            "fingerprint": "auarBBYvQ7g=",
            "generated_id": 5542925198592097497,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/regions/asia-southeast1/healthChecks/network-lb-health-check"
            ],
            "id": "projects/ehes-gcp-poc/regions/asia-southeast1/backendServices/network-lb-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "network-lb-backend",
            "port_name": "http",
            "project": "ehes-gcp-poc",
            "protocol": "TCP",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/regions/asia-southeast1/backendServices/network-lb-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.load_balancers.google_compute_instance_group_manager.instance_group",
            "module.load_balancers.google_compute_instance_template.instance_template",
            "module.load_balancers.google_compute_region_health_check.network_lb_health_check",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private_subnet_03"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "app_lb_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-23T08:07:07.101-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/ehes-gcp-poc/global/targetHttpProxies/app-lb-proxy",
            "name": "app-lb-proxy",
            "project": "ehes-gcp-poc",
            "proxy_bind": false,
            "proxy_id": 567549771970297076,
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/targetHttpProxies/app-lb-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/urlMaps/app-lb-url-map"
          },
          "dependencies": [
            "module.load_balancers.google_compute_backend_service.app_lb_backend",
            "module.load_balancers.google_compute_health_check.app_lb_health_check",
            "module.load_balancers.google_compute_url_map.app_lb_url_map"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "app_lb_https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "app_lb_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-23T08:06:54.543-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/backendServices/app-lb-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "IqVitEWRqqs=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/ehes-gcp-poc/global/urlMaps/app-lb-url-map",
            "map_id": 7639656605329702113,
            "name": "app-lb-url-map",
            "path_matcher": [],
            "project": "ehes-gcp-poc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/urlMaps/app-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancers.google_compute_backend_service.app_lb_backend",
            "module.load_balancers.google_compute_health_check.app_lb_health_check"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "cloud_armor",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "Cloud Armor security policy",
            "fingerprint": "-4p5b6PB6FI=",
            "id": "projects/ehes-gcp-poc/global/securityPolicies/my-cloud-armor-policy",
            "name": "my-cloud-armor-policy",
            "project": "ehes-gcp-poc",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Allow all traffic",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "0.0.0.0/0"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Default deny rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/securityPolicies/my-cloud-armor-policy",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat_gateway",
            "module.vpc.google_compute_subnetwork.private_subnet_01",
            "module.vpc.google_compute_subnetwork.private_subnet_02",
            "module.vpc.google_compute_subnetwork.private_subnet_03",
            "module.vpc.google_compute_subnetwork.private_subnet_04",
            "module.vpc.google_compute_subnetwork.private_subnet_05",
            "module.vpc.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ehes-gcp-poc/global/networks/main-vpc",
            "mtu": 0,
            "name": "main-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "3976794554113507077",
            "numeric_id": "3976794554113507077",
            "project": "ehes-gcp-poc",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/networks/main-vpc"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 65001,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2025-04-23T08:06:42.328-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/ehes-gcp-poc/regions/asia-southeast1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/networks/main-vpc",
            "project": "ehes-gcp-poc",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/regions/asia-southeast1/routers/nat-router"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "ehes-gcp-poc/asia-southeast1/nat-router/nat-gateway",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-gateway",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "ehes-gcp-poc",
            "region": "asia-southeast1",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-23T08:06:43.226-07:00",
            "enable_flow_logs": true,
            "gateway_address": "10.0.1.1",
            "id": "projects/ehes-gcp-poc/regions/asia-southeast1/subnetworks/private-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/networks/main-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ehes-gcp-poc",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/regions/asia-southeast1/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 570079743930842348
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-23T08:06:43.629-07:00",
            "enable_flow_logs": true,
            "gateway_address": "10.0.2.1",
            "id": "projects/ehes-gcp-poc/regions/asia-southeast1/subnetworks/private-subnet-02",
            "ip_cidr_range": "10.0.2.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "private-subnet-02",
            "network": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/networks/main-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ehes-gcp-poc",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/regions/asia-southeast1/subnetworks/private-subnet-02",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7521460277869853932
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_03",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-23T08:06:43.045-07:00",
            "enable_flow_logs": true,
            "gateway_address": "10.0.3.1",
            "id": "projects/ehes-gcp-poc/regions/asia-southeast1/subnetworks/private-subnet-03",
            "ip_cidr_range": "10.0.3.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "private-subnet-03",
            "network": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/networks/main-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ehes-gcp-poc",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/regions/asia-southeast1/subnetworks/private-subnet-03",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2019880078210809068
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_04",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-23T08:06:43.650-07:00",
            "enable_flow_logs": true,
            "gateway_address": "10.0.4.1",
            "id": "projects/ehes-gcp-poc/regions/asia-southeast1/subnetworks/private-subnet-04",
            "ip_cidr_range": "10.0.4.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "private-subnet-04",
            "network": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/networks/main-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ehes-gcp-poc",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "20.1.0.0/16",
                "range_name": "k8s-pods"
              },
              {
                "ip_cidr_range": "20.2.0.0/16",
                "range_name": "k8s-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/regions/asia-southeast1/subnetworks/private-subnet-04",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 8327949535697747180
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_05",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-23T08:06:43.426-07:00",
            "enable_flow_logs": true,
            "gateway_address": "10.0.5.1",
            "id": "projects/ehes-gcp-poc/regions/asia-southeast1/subnetworks/private-subnet-05",
            "ip_cidr_range": "10.0.5.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "private-subnet-05",
            "network": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/networks/main-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ehes-gcp-poc",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/regions/asia-southeast1/subnetworks/private-subnet-05",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 8232024408963988716
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-23T08:06:42.722-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.0.1",
            "id": "projects/ehes-gcp-poc/regions/asia-southeast1/subnetworks/public-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/global/networks/main-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ehes-gcp-poc",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ehes-gcp-poc/regions/asia-southeast1/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 8062070422757489901
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}